First commited as before_62566_rev5