@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,9 +8,12 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Sebastian Davids <sdavids@gmx.de> - bug 97667 [Preferences] Pref Page General/Editors - problems
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 489891
  *******************************************************************************/
 
 package org.eclipse.ui.internal.dialogs;
+
+import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import org.eclipse.jface.preference.FieldEditor;
 import org.eclipse.jface.preference.IPreferenceStore;
@@ -18,17 +21,13 @@ import org.eclipse.jface.preference.IntegerFieldEditor;
 import org.eclipse.jface.preference.PreferencePage;
 import org.eclipse.jface.preference.StringFieldEditor;
 import org.eclipse.jface.util.IPropertyChangeListener;
-import org.eclipse.jface.util.PropertyChangeEvent;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
-import org.eclipse.swt.widgets.Group;
 import org.eclipse.ui.IWorkbench;
 import org.eclipse.ui.IWorkbenchPreferenceConstants;
 import org.eclipse.ui.IWorkbenchPreferencePage;
@@ -61,22 +60,14 @@ public class EditorsPreferencePage extends PreferencePage implements
 
     private IntegerFieldEditor reuseEditorsThreshold;
 
-    private Group dirtyEditorReuseGroup;
-
-    private Button openNewEditor;
-
-    private Button promptToReuseEditor;
 
     private IntegerFieldEditor recentFilesEditor;
 
-    private IPropertyChangeListener validityChangeListener = new IPropertyChangeListener() {
-        @Override
-		public void propertyChange(PropertyChangeEvent event) {
-            if (event.getProperty().equals(FieldEditor.IS_VALID)) {
-				updateValidState();
-			}
-        }
-    };
+    private IPropertyChangeListener validityChangeListener = event -> {
+	    if (event.getProperty().equals(FieldEditor.IS_VALID)) {
+			updateValidState();
+		}
+	};
 
 	private Button promptWhenStillOpenEditor;
 
@@ -180,13 +171,6 @@ public class EditorsPreferencePage extends PreferencePage implements
 						.getDefaultBoolean(IWorkbenchPreferenceConstants.PROMPT_WHEN_SAVEABLE_STILL_OPEN));
         reuseEditors.setSelection(store
                 .getDefaultBoolean(IPreferenceConstants.REUSE_EDITORS_BOOLEAN));
-        dirtyEditorReuseGroup.setEnabled(reuseEditors.getSelection());
-        openNewEditor.setSelection(!store
-                .getDefaultBoolean(IPreferenceConstants.REUSE_DIRTY_EDITORS));
-        openNewEditor.setEnabled(reuseEditors.getSelection());
-        promptToReuseEditor.setSelection(store
-                .getDefaultBoolean(IPreferenceConstants.REUSE_DIRTY_EDITORS));
-        promptToReuseEditor.setEnabled(reuseEditors.getSelection());
         reuseEditorsThreshold.loadDefault();
         reuseEditorsThreshold.getLabelControl(editorReuseThresholdGroup)
                 .setEnabled(reuseEditors.getSelection());
@@ -210,8 +194,6 @@ public class EditorsPreferencePage extends PreferencePage implements
         // store the reuse editors setting
         store.setValue(IPreferenceConstants.REUSE_EDITORS_BOOLEAN, reuseEditors
                 .getSelection());
-        store.setValue(IPreferenceConstants.REUSE_DIRTY_EDITORS,
-                promptToReuseEditor.getSelection());
         reuseEditorsThreshold.store();
 
         // store the recent files setting
@@ -269,19 +251,10 @@ public class EditorsPreferencePage extends PreferencePage implements
                 .getPreferenceStore();
         reuseEditors.setSelection(store
                 .getBoolean(IPreferenceConstants.REUSE_EDITORS_BOOLEAN));
-        reuseEditors.addSelectionListener(new SelectionAdapter() {
-            @Override
-			public void widgetSelected(SelectionEvent e) {
-                reuseEditorsThreshold
-                        .getLabelControl(editorReuseThresholdGroup).setEnabled(
-                                reuseEditors.getSelection());
-                reuseEditorsThreshold.getTextControl(editorReuseThresholdGroup)
-                        .setEnabled(reuseEditors.getSelection());
-                dirtyEditorReuseGroup.setEnabled(reuseEditors.getSelection());
-                openNewEditor.setEnabled(reuseEditors.getSelection());
-                promptToReuseEditor.setEnabled(reuseEditors.getSelection());
-            }
-        });
+        reuseEditors.addSelectionListener(widgetSelectedAdapter(e -> {
+			reuseEditorsThreshold.getLabelControl(editorReuseThresholdGroup).setEnabled(reuseEditors.getSelection());
+			reuseEditorsThreshold.getTextControl(editorReuseThresholdGroup).setEnabled(reuseEditors.getSelection());
+		}));
 
         editorReuseIndentGroup = new Composite(editorReuseGroup, SWT.LEFT);
         GridLayout indentLayout = new GridLayout();
@@ -316,25 +289,6 @@ public class EditorsPreferencePage extends PreferencePage implements
                 .setEnabled(reuseEditors.getSelection());
         reuseEditorsThreshold.setPropertyChangeListener(validityChangeListener);
 
-        dirtyEditorReuseGroup = new Group(editorReuseIndentGroup, SWT.NONE);
-        layout = new GridLayout();
-        layout.marginWidth = 0;
-        dirtyEditorReuseGroup.setLayout(layout);
-        dirtyEditorReuseGroup.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, true, false));
-        dirtyEditorReuseGroup.setText(WorkbenchMessages.WorkbenchPreference_reuseDirtyEditorGroupTitle);
-        dirtyEditorReuseGroup.setEnabled(reuseEditors.getSelection());
-
-        promptToReuseEditor = new Button(dirtyEditorReuseGroup, SWT.RADIO);
-        promptToReuseEditor.setText(WorkbenchMessages.WorkbenchPreference_promptToReuseEditor);
-        promptToReuseEditor.setSelection(store
-                .getBoolean(IPreferenceConstants.REUSE_DIRTY_EDITORS));
-        promptToReuseEditor.setEnabled(reuseEditors.getSelection());
-
-        openNewEditor = new Button(dirtyEditorReuseGroup, SWT.RADIO);
-        openNewEditor.setText(WorkbenchMessages.WorkbenchPreference_openNewEditor);
-        openNewEditor.setSelection(!store
-                .getBoolean(IPreferenceConstants.REUSE_DIRTY_EDITORS));
-        openNewEditor.setEnabled(reuseEditors.getSelection());
     }
 
     /**
@@ -360,7 +314,8 @@ public class EditorsPreferencePage extends PreferencePage implements
         recentFilesEditor.setTextLimit(Integer.toString(EditorHistory.MAX_SIZE)
                 .length());
         recentFilesEditor
-                .setErrorMessage(NLS.bind(WorkbenchMessages.WorkbenchPreference_recentFilesError, new Integer(EditorHistory.MAX_SIZE) ));
+				.setErrorMessage(NLS.bind(WorkbenchMessages.WorkbenchPreference_recentFilesError,
+						Integer.valueOf(EditorHistory.MAX_SIZE)));
         recentFilesEditor
                 .setValidateStrategy(StringFieldEditor.VALIDATE_ON_KEY_STROKE);
         recentFilesEditor.setValidRange(0, EditorHistory.MAX_SIZE);
